[workspace.package]
version = "0.0.0"
description = "Cross-platform dynamic linking"
keywords = ["dynamic linking", "dynamic library", "dynlink", "dynlib"]
authors = ["Ivan Kutuzov <ikutuzov.dev@gmail.com>", "qbstack contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/qbstack/dynlink"
rust-version = "1.89"
edition = "2021"

[workspace]
resolver = "3"
members = ["dynlink"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
