[workspace.package]
version = "0.0.0"
description = "Cross-platform dynamic linking"
keywords = ["dynamic linking", "dynamic library", "dynlink", "dynlib"]
authors = ["Ivan Kutuzov <ikutuzov.dev@gmail.com>", "qbstack contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/qbstack/dynlink"
rust-version = "1.89"
edition = "2021"

[workspace]
resolver = "3"
members = ["dynlink", "dynlink-posix", "dynlink-win32", "pointersized"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[workspace.dependencies]
pointersized = { path = "pointersized" }
dynlink-posix = { path = "dynlink-posix" }
dynlink-win32 = { path = "dynlink-win32" }

# Shared dependencies
smallvec = { version = "1.15" }

# Posix backend dependencies
libc = { version = "0.2" }

# Win32 backend dependencies
windows-sys = { version = "0.61" }
