[package]
name = "dynlink-win32"
version = { workspace = true }
description = "Cross-platform dynamic linking. Win32 backend"
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
