[package]
name = "dynlink-win32"
version = "0.1.0"
description = "Cross-platform dynamic linking. Win32 backend"
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
pointersized = { workspace = true }
smallvec = { workspace = true }
windows-sys = { workspace = true, features = ["Win32_System_LibraryLoader"] }
