[package]
name = "dynlink"
version = "0.1.1"
description = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[dependencies]
pointersized = { workspace = true }

[target.'cfg(unix)'.dependencies]
dynlink-posix = { workspace = true }

[target.'cfg(windows)'.dependencies]
dynlink-win32 = { workspace = true }
